v1 variational agent done

--- a/variational_updates.ipynb
+++ b/variational_updates.ipynb
@@ -12,10 +12,190 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 355,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def construct_parameter_combinations(param_labels, param_values):\n",
+    "    num_values = np.array([p_v.size for p_v in param_values])\n",
+    "    c = len(param_labels) # Number of parameters (columns)\n",
+    "    r = num_values.prod() # Number of tuples (rows)\n",
+    "    S = np.zeros((r, c))\n",
+    "    for i in range(c):\n",
+    "        tile_coef = int(num_values[i+1:].prod())\n",
+    "        rep_coef = int(num_values[:i].prod())\n",
+    "        ou = np.tile(param_values[i], (int(tile_coef), 1)).flatten('F')\n",
+    "        o = ou[np.tile(np.arange(ou.size), (1, rep_coef)).flatten()]\n",
+    "        S[:, i] = o.T\n",
+    "    return S\n",
+    "\n",
+    "\n",
+    "def construct_link_matrix(K):\n",
+    "    G = np.empty((K, K), dtype=object)\n",
+    "    for i in range(K):\n",
+    "        for j in range(K):\n",
+    "            if i == j:\n",
+    "                G[i, j] = ''\n",
+    "            else:\n",
+    "                G[i, j] = f'{i}->{j}'\n",
+    "    \n",
+    "    return G"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 388,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'theta': {'values': array([0.1, 0.5, 1. , 3. ]),\n",
+       "  'prior': None,\n",
+       "  'type': 'no_link',\n",
+       "  'dependencies_as_bool': array([False,  True, False, False, False, False, False, False]),\n",
+       "  'dependencies_as_str': array(['sigma'], dtype=object)},\n",
+       " 'sigma': {'values': array([0.5, 1. , 3. , 6. ]),\n",
+       "  'prior': None,\n",
+       "  'type': 'no_link',\n",
+       "  'dependencies_as_bool': array([ True, False, False, False, False, False, False, False]),\n",
+       "  'dependencies_as_str': array(['theta'], dtype=object)},\n",
+       " '0->1': {'values': array([-1. , -0.5,  0. ,  0.5,  1. ]),\n",
+       "  'prior': None,\n",
+       "  'type': 'link',\n",
+       "  'dependencies_as_bool': array([ True,  True, False, False, False, False, False,  True]),\n",
+       "  'dependencies_as_str': array(['theta', 'sigma', '2->1'], dtype=object)},\n",
+       " '0->2': {'values': array([-1. , -0.5,  0. ,  0.5,  1. ]),\n",
+       "  'prior': None,\n",
+       "  'type': 'link',\n",
+       "  'dependencies_as_bool': array([ True,  True, False, False, False,  True, False, False]),\n",
+       "  'dependencies_as_str': array(['theta', 'sigma', '1->2'], dtype=object)},\n",
+       " '1->0': {'values': array([-1. , -0.5,  0. ,  0.5,  1. ]),\n",
+       "  'prior': None,\n",
+       "  'type': 'link',\n",
+       "  'dependencies_as_bool': array([ True,  True, False, False, False, False,  True, False]),\n",
+       "  'dependencies_as_str': array(['theta', 'sigma', '2->0'], dtype=object)},\n",
+       " '1->2': {'values': array([-1. , -0.5,  0. ,  0.5,  1. ]),\n",
+       "  'prior': None,\n",
+       "  'type': 'link',\n",
+       "  'dependencies_as_bool': array([ True,  True, False,  True, False, False, False, False]),\n",
+       "  'dependencies_as_str': array(['theta', 'sigma', '0->2'], dtype=object)},\n",
+       " '2->0': {'values': array([-1. , -0.5,  0. ,  0.5,  1. ]),\n",
+       "  'prior': None,\n",
+       "  'type': 'link',\n",
+       "  'dependencies_as_bool': array([ True,  True, False, False,  True, False, False, False]),\n",
+       "  'dependencies_as_str': array(['theta', 'sigma', '1->0'], dtype=object)},\n",
+       " '2->1': {'values': array([-1. , -0.5,  0. ,  0.5,  1. ]),\n",
+       "  'prior': None,\n",
+       "  'type': 'link',\n",
+       "  'dependencies_as_bool': array([ True,  True,  True, False, False, False, False, False]),\n",
+       "  'dependencies_as_str': array(['theta', 'sigma', '0->1'], dtype=object)}}"
+      ]
+     },
+     "execution_count": 388,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parameter_set_nc = {\n",
+    "    'theta': {\n",
+    "        'values': np.array([0.1, 0.5, 1, 3]),\n",
+    "        'prior': None,\n",
+    "        'type': 'no_link'\n",
+    "    },\n",
+    "    'sigma': {\n",
+    "        'values': np.array([0.5, 1, 3, 6]),\n",
+    "        'prior': None,\n",
+    "        'type': 'no_link'\n",
+    "    }\n",
+    "}\n",
+    "K = 3\n",
+    "links = np.array([-1, -1/2, 0, 1/2, 1])\n",
+    "\n",
+    "def complete_parameter_set(parameter_set_non_causal, K, links):\n",
+    "    links_matrix = construct_link_matrix(K)\n",
+    "    parameter_set = parameter_set_non_causal\n",
+    "\n",
+    "    no_link_names = [k for k in parameter_set.keys()]\n",
+    "    num_no_links = len([k for k in parameter_set.keys()])\n",
+    "    num_links = K*(K-1)\n",
+    "\n",
+    "    \n",
+    "\n",
+    "    for i, name in enumerate(no_link_names):\n",
+    "        dep_as_bool = np.zeros(num_no_links, dtype=bool)\n",
+    "        dep_as_bool[i] = 1\n",
+    "        parameter_set[name]['dependencies_as_bool'] = np.concatenate((~dep_as_bool, np.zeros(num_links, dtype=bool)))\n",
+    "        parameter_set[name]['dependencies_as_str'] = np.array(no_link_names, dtype=object)[~dep_as_bool]\n",
+    "\n",
+    "    for i in range(K):\n",
+    "        for j in range(K):\n",
+    "            if i != j:\n",
+    "                parameter_set[links_matrix[i, j]] = {\n",
+    "                    'values': links,\n",
+    "                    'prior': None, \n",
+    "                    'type': 'link'\n",
+    "                }\n",
+    "                dep_as_bool_nl = np.ones(num_no_links, dtype=bool)\n",
+    "\n",
+    "                dep_as_bool = np.zeros((K, K), dtype=bool)\n",
+    "                other_cause = np.zeros(K, dtype=bool)\n",
+    "                other_link = None\n",
+    "                for k in range(K):\n",
+    "                    if k != i and k != j:\n",
+    "                        other_cause[k] = 1\n",
+    "                        other_link = links_matrix[k, j]\n",
+    "\n",
+    "                dep_as_bool[other_cause, j] = 1\n",
+    "\n",
+    "                eye = np.eye(K, dtype=bool)\n",
+    "                parameter_set[links_matrix[i, j]]['dependencies_as_bool'] = np.concatenate((dep_as_bool_nl, dep_as_bool[~eye]), dtype=bool)\n",
+    "                parameter_set[links_matrix[i, j]]['dependencies_as_str'] = np.array(no_link_names + [other_link], dtype=object)\n",
+    "\n",
+    "            \n",
+    "\n",
+    "    return parameter_set\n",
+    "\n",
+    "complete_parameter_set(parameter_set_nc, K, links)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 370,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['' '0->1' '0->2']\n",
+      " ['1->0' '' '1->2']\n",
+      " ['2->0' '2->1' '']]\n",
+      "[[ True False False]\n",
+      " [False  True False]\n",
+      " [False False  True]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array(['0->1', '0->2', '1->0', '1->2', '2->0', '2->1'], dtype=object)"
+      ]
+     },
+     "execution_count": 370,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "causal_matrix = construct_link_matrix(K)\n",
+    "print(causal_matrix)\n",
+    "\n",
+    "eye = np.eye(K, dtype=bool)\n",
+    "print(eye)\n",
+    "causal_matrix[~eye]"
+   ]
   },
   {
    "cell_type": "code",
@@ -81,38 +261,6 @@
     "        'type': 'link'\n",
     "    }\n",
     "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 255,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def construct_parameter_combinations(param_labels, param_values):\n",
-    "    num_values = np.array([p_v.size for p_v in param_values])\n",
-    "    c = len(param_labels) # Number of parameters (columns)\n",
-    "    r = num_values.prod() # Number of tuples (rows)\n",
-    "    S = np.zeros((r, c))\n",
-    "    for i in range(c):\n",
-    "        tile_coef = int(num_values[i+1:].prod())\n",
-    "        rep_coef = int(num_values[:i].prod())\n",
-    "        ou = np.tile(param_values[i], (int(tile_coef), 1)).flatten('F')\n",
-    "        o = ou[np.tile(np.arange(ou.size), (1, rep_coef)).flatten()]\n",
-    "        S[:, i] = o.T\n",
-    "    return S\n",
-    "\n",
-    "\n",
-    "def construct_link_matrix(K):\n",
-    "    G = np.empty((K, K), dtype=object)\n",
-    "    for i in range(K):\n",
-    "        for j in range(K):\n",
-    "            if i == j:\n",
-    "                G[i, j] = ''\n",
-    "            else:\n",
-    "                G[i, j] = f'{i}->{j}'\n",
-    "    \n",
-    "    return G"
    ]
   },
   {
